--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="action">
+                <div class="action-content">
+                    <h2 class="action-title raleway-normal">See It in Action</h2>
+                    <p class="action-des raleway-normal">Explore the live preview and imagine your 
+                        <br> brand in this bold new look.</p>
+                        <button class="btn-primary">Launch Live Preview</button>
+                </div>
+                <img class="action-img" src="/assets/wc-mini.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
