--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               brand in this bold new look.
             </p>
             <button class="btn-primary">Launch Live Preview</button>
-          </div>
+          </div >
           <img class="action-img" src="/assets/wc-mini.png" alt="" />
         </div>
       </section>
@@ -83,79 +83,140 @@
         <div class="review">
           <h2 class="raleway-normal review-title">What our users say</h2>
           <div class="review-cards">
-                <div class="card">
-                    <div class="card-content">
-                        <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    </div>
-                    
+            <div class="card">
+              <div class="card-content">
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+              </div>
 
-                    <div class="card-body">
-                        <h4 class="card-title">Loved by Designers</h4>
-                        <p class="card-des">This template instantly leveled up our <br>
-                             presence.” – Studio Vertex</p>
-                    </div>
-                    <div class="card-footer">
-                        <img src="/assets/avatar.png" alt="">
-                        <ul>
-                            <li class="li-1">Reviewer name</li>
-                            <li class="li-2">Date</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    </div>
+              <div class="card-body">
+                <h4 class="card-title">Loved by Designers</h4>
+                <p class="card-des">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Vertex
+                </p>
+              </div>
+              <div class="card-footer">
+                <img src="/assets/avatar.png" alt="" />
+                <ul>
+                  <li class="li-1">Reviewer name</li>
+                  <li class="li-2">Date</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+              </div>
 
-                    <div class="card-body">
-                        <h4 class="card-title">Loved by Designers</h4>
-                        <p class="card-des">This template instantly leveled up our <br>
-                             presence.” – Studio Vertex</p>
-                    </div>
+              <div class="card-body">
+                <h4 class="card-title">Loved by Designers</h4>
+                <p class="card-des">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Vertex
+                </p>
+              </div>
 
-                   
-                    <div class="card-footer">
-                        <img class="footer-img" src="/assets/avatar.png" alt="">
-                        <ul>
-                            <li class="li-1">Reviewer name</li>
-                            <li class="li-2">Date</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    <img src="/assets/icon-star.png" alt="">
-                    </div>
+              <div class="card-footer">
+                <img class="footer-img" src="/assets/avatar.png" alt="" />
+                <ul>
+                  <li class="li-1">Reviewer name</li>
+                  <li class="li-2">Date</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+                <img src="/assets/icon-star.png" alt="" />
+              </div>
 
-                    <div class="card-body">
-                        <h4 class="card-title">Loved by Designers</h4>
-                        <p class="card-des">This template instantly leveled up our <br>
-                             presence.” – Studio Vertex</p>
-                    </div>
-                    <div class="card-footer">
-                        <img src="/assets/avatar.png" alt="">
-                        <ul>
-                            <li class="li-1">Reviewer name</li>
-                            <li class="li-2">Date</li>
-                        </ul>
-                    </div>
-                </div>
+              <div class="card-body">
+                <h4 class="card-title">Loved by Designers</h4>
+                <p class="card-des">
+                  This template instantly leveled up our <br />
+                  presence.” – Studio Vertex
+                </p>
+              </div>
+              <div class="card-footer">
+                <img src="/assets/avatar.png" alt="" />
+                <ul>
+                  <li class="li-1">Reviewer name</li>
+                  <li class="li-2">Date</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="ban-2">
+          <div class="ban-2-content">
+            <h1 class="ban-2-head raleway-normal">Ready to focus better</h1>
+            <p class="ban-2-des">
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <button class="btn-primary">Get Started Free</button>
+          </div>
+          <img class="ban-2-cont" src="/assets/wc-big.png" alt="" />
+        </div>
+      </section>
+
+      <section>
+        <div class="form">
+          <div class="form-column">
+            <h3 class="form-section-title raleway-normal">
+              Let’s Get in Touch
+            </h3>
+          </div>
+          <div class="form-column">
+            <form action="">
+              <h3 class="form-text inter-normal">Email</h3>
+              <input type="email" placeholder="example@email.com" required />
+              <h3 class="form-text inter-normal">Name</h3>
+              <input type="text" placeholder="full name" required />
+              <h3 class="form-text inter-normal">Message</h3>
+              <textarea
+                placeholder="write your message..."
+                cols="30"
+                rows="20"
+              ></textarea>
+              <button class="form-btn btn-primary" type="submit">
+                Get in Touch
+              </button>
+            </form>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section>
+        <div class="footer">
+          <h1 class="footer-title inter-normal">LOGO</h1>
+          <p class="footer-des">
+            Ready to elevate your online presence? Contact us today to discuss
+            <br />
+            your project and discover how we can bring your vision to life.
+          </p>
+          <div class="footer-foot">
+            <div class="footer-foot-title">Home</div>
+            <div class="footer-foot-title">About</div>
+            <div class="footer-foot-title">How it Works</div>
+            <div class="footer-foot-title">Services</div>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
