--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
             <button class="btn-primary">Launch Live Preview</button>
           </div >
-          <img class="action-img" src="/assets/wc-mini.png" alt="" />
+          <img class="action-img" src="/assets/wc-mini.png" alt="wc-mini" />
         </div>
       </section>
 
