--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
             <button class="btn-primary">Launch Live Preview</button>
           </div >
-          <img class="action-img" src="/assets/wc-mini.png" alt="wc-mini" />
+          <img class="action-img" src="./assets/wc-mini.png" alt="wc-mini" />
         </div>
       </section>
 
@@ -85,11 +85,11 @@
           <div class="review-cards">
             <div class="card">
               <div class="card-content">
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
               </div>
 
               <div class="card-body">
@@ -100,7 +100,7 @@
                 </p>
               </div>
               <div class="card-footer">
-                <img src="/assets/avatar.png" alt="" />
+                <img src="./assets/avatar.png" alt="" />
                 <ul>
                   <li class="li-1">Reviewer name</li>
                   <li class="li-2">Date</li>
@@ -109,11 +109,11 @@
             </div>
             <div class="card">
               <div class="card-content">
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
               </div>
 
               <div class="card-body">
@@ -125,7 +125,7 @@
               </div>
 
               <div class="card-footer">
-                <img class="footer-img" src="/assets/avatar.png" alt="" />
+                <img class="footer-img" src="./assets/avatar.png" alt="" />
                 <ul>
                   <li class="li-1">Reviewer name</li>
                   <li class="li-2">Date</li>
@@ -134,11 +134,11 @@
             </div>
             <div class="card">
               <div class="card-content">
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
-                <img src="/assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
+                <img src="./assets/icon-star.png" alt="" />
               </div>
 
               <div class="card-body">
@@ -149,7 +149,7 @@
                 </p>
               </div>
               <div class="card-footer">
-                <img src="/assets/avatar.png" alt="" />
+                <img src="./assets/avatar.png" alt="" />
                 <ul>
                   <li class="li-1">Reviewer name</li>
                   <li class="li-2">Date</li>
@@ -169,7 +169,7 @@
             </p>
             <button class="btn-primary">Get Started Free</button>
           </div>
-          <img class="ban-2-cont" src="/assets/wc-big.png" alt="" />
+          <img class="ban-2-cont" src="./assets/wc-big.png" alt="" />
         </div>
       </section>
 
